Prevent overflow on docs dot container

--- a/docs/lib/css/main.scss
+++ b/docs/lib/css/main.scss
@@ -79,6 +79,7 @@ a {
     background-repeat: repeat;
     background-size: 1%;
     height: 500%;
+    overflow: hidden;
     position: relative;
     z-index: 1;
 }
